logs/TextClient_2023_02_28_10_42_42.txt
[root at 2023-02-28 10:42:42,867]: Archipelago (0.3.9) logging initialized on Linux-6.1.12-x64v3-xanmod1-x86_64-with-glibc2.35 running Python 3.10.6
[Client at 2023-02-28 10:42:42,995]: Uncaught exception
Traceback (most recent call last):
  File "/mnt/115b93af-9f3b-43c4-a778-48dcab29caf0/Randomizers/Archipelago Betas/CommonClient.py", line 24, in <module>
    from worlds import network_data_package, AutoWorldRegister
  File "/mnt/115b93af-9f3b-43c4-a778-48dcab29caf0/Randomizers/Archipelago Betas/worlds/__init__.py", line 70, in <module>
    importlib.import_module(f".{world_source.path}", "worlds")
  File "/usr/lib/python3.10/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "/mnt/115b93af-9f3b-43c4-a778-48dcab29caf0/Randomizers/Archipelago Betas/worlds/dark_souls_3/__init__.py", line 240
    def fill_slot_data(self) -> Dict[str, object]:
                                                  ^
IndentationError: unindent does not match any outer indentation level
